# pleustradenn

./: .gitignore  Dockerfile  README.md  entrypoint.sh  flake.nix  justfile  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: docker-build.yml
backend/: database.py  env.py  init_db_data.py  jwt.py  main.py  models.py  passlib.py  pyproject.toml
backend/crud/: categories.py  exercise.py  items.py  user.py  users.py  workout.py  workout_exercise.py
backend/migrations/alembic/: env.py
backend/migrations/alembic/versions/: a3eaf8d6e0c1_change_quantity_column_to_float.py  b94cea4d6a34_update_null_units_and_notes.py
backend/router/: categories.py  exercise.py  items.py  session.py  session_exercise.py  user.py  workout.py  workout_exercise.py
backend/schemas/: categories.py  exercise.py  items.py  user.py  workout.py  workout_exercise.py
backend/tests/: conftest.py  test_categories.py  test_exercise.py  test_session.py  test_session_exercise.py  test_user.py  test_workout.py  test_workout_exercise.py
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/prisma/: db1.sqlite  schema.prisma  seed.ts
frontend/prisma/migrations/20250407112621_init/: migration.sql
frontend/prisma/migrations/20250411101704_init/: migration.sql
frontend/src/: app.html  hooks.client.ts  hooks.server.ts
frontend/src/components/: ActiveItems.svelte  AddItemButton.svelte  Alert.svelte  CategoryForm.svelte  EditItem.svelte  ExerciseEditRow.svelte  ExerciseForm.svelte  ExerciseTable.svelte  InactiveItems.svelte  Item.svelte  ItemForm.svelte  Navbar.svelte  Notes.svelte  Search.svelte  SearchResult.svelte  SessionExerciseForm.svelte  SessionForm.svelte  ToggleActive.svelte  WorkoutList.svelte
frontend/src/lib/: Api.ts  alert.ts  api.ts  auth.ts  exercise.ts  page.ts  session-exercise.ts  session.ts  store.ts  types.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  hooks.server.ts
frontend/static/: background.avif  manifest.json
prisma/: schema.prisma  seed.ts
prisma/migrations/20250424111117_init/: migration.sql
prisma/migrations/20250425091600_init/: migration.sql
prisma/migrations/20250430211448_init/: migration.sql
prisma/migrations/20250501212204_init/: migration.sql
prisma/migrations/20250506211657_init/: migration.sql
prisma/migrations/20250612200852_add_localized_exercise_names/: migration.sql
prisma/migrations/20250612201142_add_language_to_profile/: migration.sql
prisma/migrations/20250614105611_remove_category_model/: migration.sql
prisma/migrations/20250622194304_add_user_to_exercises/: migration.sql
prisma/migrations/20250622194330_make_user_required_on_exercise/: migration.sql
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/components/: AddExerciseButton.svelte  Alert.svelte  AuthForm.svelte  Clock.svelte  ClockButton.svelte  ConfirmPopup.svelte  ExerciseForm.svelte  Menu.svelte  Navbar.svelte
src/components/Sets/: AddSetButton.svelte  NumberInput.svelte  SingleSet.svelte
src/components/icons/: Bin.svelte  Chevron.svelte  Clock.svelte  Clone.svelte  Close.svelte  Edit.svelte  Hamburger.svelte  Log.svelte  Minus.svelte  Plus.svelte  TickedBox.svelte  Trophy.svelte  UntickedBox.svelte
src/lib/: types.ts
src/lib/client/: alert.ts  confirm.ts
src/lib/server/: get_last_set.ts  startup.ts  validate_exercise.ts
src/lib/stores/: i18n.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.server.ts  +layout.svelte
src/routes/login/: +page.server.ts  +page.svelte
src/routes/logout/: +page.server.ts
src/routes/register/: +page.server.ts  +page.svelte
static/: bg.avif  manifest.json
(+95 files in other folders)
